--- a/docker-compose_cpu.yml
+++ b/docker-compose_cpu.yml
@@ -2,20 +2,20 @@ version: '2.3'
 
 services:
     graphonomy_server_cpu:
-        container_name: graphonomy_server_cpu_container
-        image: graphonomy_wrapper_image
+        container_name: graphonomy-container-cpu
+        image: graphonomy-image
         build:
             context: "."
-            dockerfile: docker/Dockerfile
-        volumes:
+            dockerfile: api/Dockerfile
+#        volumes:
 #            - ${PWD}:/graphonomy_api-server_gke
-            - /etc/group:/etc/group:ro
-            - /etc/passwd:/etc/passwd:ro
+#            - /etc/group:/etc/group:ro
+#            - /etc/passwd:/etc/passwd:ro
         ports:
-            - "5002:5002"
+            - "5000:5000"
         tty: true
         environment:
             TZ: "Asia/Tokyo"
             LC_ALL: C.UTF-8
             LANG: C.UTF-8
-#        command: bash -c "python3 app.py --host 0.0.0.0 --port 5002 --device cpu"
+        #command: bash -c "python3 app.py --host 0.0.0.0 --port 5000 --device cpu"
