--- a/docker-compose_gpu.yml
+++ b/docker-compose_gpu.yml
@@ -2,21 +2,21 @@ version: '2.3'
 
 services:
     graphonomy_server_gpu:
-        container_name: graphonomy_server_gpu_container
-        image: graphonomy_wrapper_image
+        container_name: graphonomy-container-gpu
+        image: graphonomy-image
         runtime: nvidia
         build:
             context: "."
-            dockerfile: docker/Dockerfile
-        volumes:
-            - ${PWD}:/graphonomy_wrapper
-            - /etc/group:/etc/group:ro
-            - /etc/passwd:/etc/passwd:ro
+            dockerfile: api/Dockerfile
+        #volumes:
+        #    - ${PWD}:/graphonomy_api-server_gke
+        #    - /etc/group:/etc/group:ro
+        #    - /etc/passwd:/etc/passwd:ro
         ports:
-            - "5001:5001"
+            - "5000:5000"
         tty: true
         environment:
             TZ: "Asia/Tokyo"
             LC_ALL: C.UTF-8
             LANG: C.UTF-8
-        command: bash -c "python3 app.py --host 0.0.0.0 --port 5001 --device gpu --use_amp"
+        #command: bash -c "python3 app.py --host 0.0.0.0 --port 5000 --device gpu --use_amp"
