--- a/cloudbuild.yml
+++ b/cloudbuild.yml
@@ -1,5 +1,6 @@
 steps:
   - name: 'gcr.io/cloud-builders/docker'
-    args: ['build', '--cache-from', '-t', 'gcr.io/myproject-292103/graphonomy-image', '.']
+    args: ['build', '-t', 'gcr.io/myproject-292103/graphonomy-image', '.']
+    #args: ['build', '--cache-from', '-t', 'gcr.io/myproject-292103/graphonomy-image', '.']
 images: ['gcr.io/myproject-292103/graphonomy-image']
 timeout: 3600s
